# passport-data-retrieval

./: .cnb.yml  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  index.html  license.config.json  package-lock.json  package.json  release.ps1  tsconfig.json  version.json  vite.config.ts  启动护照工具.bat  构建.bat
.trae/documents/: release-simplification-plan.md
.zcode/commands/: review-code.md
src/: main.ts  style.css  updater.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bundles/windows/wix/: WixFile.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: download.rs  excel.rs  lib.rs  license.rs  main.rs  openai.rs  server.rs
