[package]
name = "passport-ocr"
version = "1.0.0"
description = "护照信息识别工具"
authors = [""]
edition = "2021"

[lib]
name = "passport_ocr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
chrono = { version = "0.4" }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
rust_xlsxwriter = "0.82"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
